--- a/2022_05_07.ipynb
+++ b/2022_05_07.ipynb
@@ -19,7 +19,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "fcDwXAr0aQ1G"
       },
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "tFHxRqxaIDO3"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -54,19 +54,18 @@
       "source": [
         "@jit(nopython=True)\n",
         "def inner_product_for_grad(x, y, b):\n",
-        "    out = 0.\n",
+        "    out = b * (-1)\n",
         "    \n",
         "    for i in range(x.size):\n",
         "        out += x[i] * y[i]\n",
         "    \n",
-        "    out -= b\n",
         "\n",
         "    return out"
       ],
       "metadata": {
         "id": "z6qDjMawRSF7"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -85,7 +84,7 @@
       "metadata": {
         "id": "KOqhjdzNZzPL"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -128,46 +127,47 @@
       "metadata": {
         "id": "AUzaE-gBImjX"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "A = np.random.rand(1000,1000)\n",
-        "b = np.random.rand(1000)\n",
+        "A = np.random.rand(10000,1000)\n",
+        "b = np.random.rand(10000)\n",
         "x = np.random.rand(1000)\n",
         "out = np.zeros((1000))"
       ],
       "metadata": {
         "id": "gqxAX-owVnVF"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "## In CPU with numpy\n",
-        "grad = A.T @ (A @ x - b)\n",
-        "%time grad = A.T @ (A @ x - b)\n",
-        "## almost 850 us takes to calculate "
+        "%%time \n",
+        "for i in range(100):\n",
+        "    grad = A.T @ (A @ x - b)\n",
+        "## almost 660 us takes to calculate "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ONPbwl5WWzkB",
-        "outputId": "0f50f570-07ca-42d8-9f8f-6d8e3c6a48b8"
+        "outputId": "ffd43911-ef0d-4359-b4f7-d6404a4f3305"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 1.62 ms, sys: 0 ns, total: 1.62 ms\n",
-            "Wall time: 815 µs\n"
+            "CPU times: user 2.14 s, sys: 215 ms, total: 2.36 s\n",
+            "Wall time: 1.46 s\n"
           ]
         }
       ]
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "BoKJ7M2CVuSU"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -193,20 +193,22 @@
         "threadsperblock = (TPB,TPB)\n",
         "blockspergrid_x = int(np.ceil(A.shape[0] / threadsperblock[1]))\n",
         "blockspergrid_y = int(np.ceil(A.shape[1] / threadsperblock[0]))\n",
-        "blockspergrid = (blockspergrid_x, blockspergrid_y)"
+        "blockspergrid = (blockspergrid_x, blockspergrid_y)\n",
+        "get_grad[blockspergrid, threadsperblock](A_, x_, b_, out_)"
       ],
       "metadata": {
         "id": "9KnQ0tqoV0b4"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "## Start the kernel\n",
-        "get_grad[blockspergrid, threadsperblock](A_, x_, b_, out_)\n",
-        "%time get_grad[blockspergrid, threadsperblock](A_, x_, b_, out_)\n",
+        "%%time \n",
+        "for i in range(100):\n",
+        "    get_grad[blockspergrid, threadsperblock](A_, x_, b_, out_)\n",
         "## almost 600 us takes to calculate"
       ],
       "metadata": {
@@ -214,16 +216,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ouWFEKaxaX2U",
-        "outputId": "fb108576-fa1a-42e7-9bf1-8a8a3c5572ea"
+        "outputId": "badbef8d-9ada-42b0-d196-87023f257c6b"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 543 µs, sys: 0 ns, total: 543 µs\n",
-            "Wall time: 551 µs\n"
+            "CPU times: user 68.5 ms, sys: 429 µs, total: 68.9 ms\n",
+            "Wall time: 125 ms\n"
           ]
         }
       ]
@@ -251,16 +253,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZxgvrmG9XBQA",
-        "outputId": "38ec499b-d8c7-4c6d-bd62-eef60334356b"
+        "outputId": "47897997-650d-467a-c47c-eebd5b4de4d6"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "False\n",
-            "0.03609959156787921\n"
+            "3.7811964203109594\n"
           ]
         }
       ]
