--- a/2022_05_07.ipynb
+++ b/2022_05_07.ipynb
@@ -151,7 +151,7 @@
         "%%time \n",
         "for i in range(100):\n",
         "    grad = A.T @ (A @ x - b)\n",
-        "## almost 660 us takes to calculate "
+        "## almost 14.6 ms takes to calculate "
       ],
       "metadata": {
         "colab": {
@@ -209,7 +209,7 @@
         "%%time \n",
         "for i in range(100):\n",
         "    get_grad[blockspergrid, threadsperblock](A_, x_, b_, out_)\n",
-        "## almost 600 us takes to calculate"
+        "## almost 1.25 ms takes to calculate"
       ],
       "metadata": {
         "colab": {
